# state-aware-rag

./: .gitignore  PRODUCTION_TEST.md  README.md  pyproject.toml  本番テスト.md
.agent/: PLANS.md
data/: README.md
docs/: HelixDBの役割.md  LLMクライアントコード.md  adr-001-helixdb-python-integration.md  adr-002-bosun-xs-integration.md  completion-audit.md  plan-entity-relation-extraction.md  sample.md  verification.md  トークナイザーの代わりにbudouxを使ってチャンクに分割したい.md  埋め込みベクトルを作る.md  実用版 State-Aware RAG 仕様書.md
helix_project/: helix.toml
helix_project/examples/: request.json
helix_project_ruri/: helix.toml
logs/: README.md
plans/: helix-document-neighbor-native-plan.md  【完了】01_仕様ギャップ実装plan.md  【完了】helix-document-neighbor-native-plan.md  【完了】仕様ギャップ実装plan-phase2.md  仕様ギャップ実装plan.md
scripts/: run_production_scifact_eval.py
src/state_aware_rag/: __init__.py  bosun.py  chunking.py  cli.py  config.py  embedding.py  extraction.py  helix.py  helix_store.py  json_parse.py  language.py  llm.py  models.py  orchestrator.py  retrieval.py  run_log.py  store.py  strategy.py  text.py
tests/: test_bosun_xs_contract.py  test_chunking.py  test_cli.py  test_embedding.py  test_extraction.py  test_helix_backend.py  test_json_parse.py  test_language.py  test_run_log.py  test_state_aware_rag.py
