[project]
name = "state-aware-rag"
version = "0.1.0"
description = "Practical State-Aware RAG implementation with working memory, evidence, and iterative retrieval."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "budoux>=0.8.4",
    "openai>=1.0",
    "openpyxl>=3.1",
    "sentence-transformers>=3.0",
    "torch==2.6.0",
]

[project.optional-dependencies]
bosun-native = [
    "transformers",
    "peft",
]
ruri = [
    "sentence-transformers>=3.0",
    "torch==2.6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
state-aware-rag = "state_aware_rag.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "gpu: requires CUDA-compatible PyTorch and NVIDIA driver",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
